--- a/style.css
+++ b/style.css
@@ -8,23 +8,27 @@ header{
     font-size: x-large;
     padding: 15px;
     padding-bottom: 20px;
-    border-bottom: 2px solid black;
+    
     padding-left: 50px;
 
 
 }
 #grid {
+
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
     border-bottom: 2px solid black;
-border-right: 2px solid black;
+    border-right: 2px solid black;
+    border-top: 2px solid black;
+    max-height: 350px;
+    max-width: 1000px;
 }
 
 #cambio {
 
-    padding: 10%;
+    padding: 10px;
     grid-column: 1;
     grid-row: 1;
     background-color: #3d3c3c;
